Form success redirect in place

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ permalink: /contact/
 
 <form class="simple_form" action="https://getsimpleform.com/messages?form_api_token=b6822d1438b8ed1581675675dc357763" method="post">
   <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-  <input type='hidden' name='redirect_to' value='https://gardhauge.github.io' />
+  <input type='hidden' name='redirect_to' value='https://gardhauge.github.io/form_success/' />
   <!-- all your input fields here.... -->
   </br>
   <label>Email:</label>
